tests/baselines/reference/superSymbolIndexedAccess5(strict=true).errors.txt
superSymbolIndexedAccess5.ts(11,16): error TS7053: Element implicitly has an 'any' type because expression of type 'any' can't be used to index type 'Foo'.


==== superSymbolIndexedAccess5.ts (1 errors) ====
    var symbol: any;
    
    class Foo {
        [symbol]() {
            return 0;
        }
    }
    
    class Bar extends Foo {
        [symbol]() {
            return super[symbol]();
                   ~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'any' can't be used to index type 'Foo'.
        }
    }